[gd_scene load_steps=6 format=2]

[ext_resource path="res://Main/Main.gd" type="Script" id=1]
[ext_resource path="res://Mob/RigidBody2D_Mob.tscn" type="PackedScene" id=2]
[ext_resource path="res://Player/Area2D_Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://HUD/HUD.tscn" type="PackedScene" id=4]

[sub_resource type="Curve2D" id=1]

bake_interval = 5.0
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 23.1482, 14.4911, 0, 0, 0, 0, 1015.22, 21.0072, 0, 0, 0, 0, 1015.22, 583.018, 0, 0, 0, 0, 15.0032, 581.389, 0, 0, 0, 0, 24.7772, 14.4911, 0, 0, 0, 0, 23.1482, 14.4911 )
}

[node name="Main" type="Node" index="0"]

script = ExtResource( 1 )
Mob = ExtResource( 2 )

[node name="Area2D_Player" parent="." index="0" instance=ExtResource( 3 )]

position = Vector2( 308.536, 279.092 )

[node name="Mob" type="Timer" parent="." index="1"]

process_mode = 1
wait_time = 2.0
one_shot = false
autostart = false

[node name="Starter" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 0.5
one_shot = true
autostart = true

[node name="ScoreCounter" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="Position2D" type="Position2D" parent="." index="4"]

position = Vector2( 267.159, 270.417 )

[node name="Path2D" type="Path2D" parent="." index="5"]

curve = SubResource( 1 )

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D" index="0"]

position = Vector2( 23.1482, 14.4911 )
rotation = 0.00656806
offset = 0.0
h_offset = 0.0
v_offset = 0.0
rotate = true
cubic_interp = true
loop = true
lookahead = 4.0

[node name="CanvasLayer" parent="." index="6" instance=ExtResource( 4 )]

[connection signal="hit" from="Area2D_Player" to="." method="game_over"]

[connection signal="timeout" from="Mob" to="." method="_on_Mob_timeout"]

[connection signal="timeout" from="Starter" to="." method="_on_Starter_timeout"]

[connection signal="timeout" from="ScoreCounter" to="." method="_on_ScoreCounter_timeout"]

[connection signal="start_game" from="CanvasLayer" to="." method="_on_CanvasLayer_start_game"]


